// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`preval-extract babel plugin with extraction enabled extract styles to a given file 1`] = `
"/**
 * THIS FILE IS AUTOGENERATED. DO NOT EDIT IT DIRECTLY OR COMMIT IT TO VERSION CONTROL.
 * SOURCE: test.js
 */

._header__zkmz8m{font-size:3em;}"
`;

exports[`preval-extract babel plugin with extraction enabled extract styles to a given file with output directory specified 1`] = `
"/**
 * THIS FILE IS AUTOGENERATED. DO NOT EDIT IT DIRECTLY OR COMMIT IT TO VERSION CONTROL.
 * SOURCE: test.js
 */

._header__zkmz8m{font-size:3em;}"
`;

exports[`preval-extract babel plugin with extraction enabled should extract all styles to a single file 1`] = `
"/**
 * THIS FILE IS AUTOGENERATED. DO NOT EDIT IT DIRECTLY OR COMMIT IT TO VERSION CONTROL.
 * SOURCE: test.js
 */


._header__zkmz8m{font-size:3em;}"
`;

exports[`preval-extract babel plugin with extraction enabled should extract all styles to a single file 2`] = `
"/**
 * THIS FILE IS AUTOGENERATED. DO NOT EDIT IT DIRECTLY OR COMMIT IT TO VERSION CONTROL.
 * SOURCE: test.js
 */


._body__zkmz8m{font-weight:bold;}"
`;

exports[`preval-extract babel plugin with extraction enabled should extract each style to separate file and include it into source file 1`] = `
"/**
 * THIS FILE IS AUTOGENERATED. DO NOT EDIT IT DIRECTLY OR COMMIT IT TO VERSION CONTROL.
 * SOURCE: test1.js
 */

._header__jz3lbe{font-size:3em;}"
`;

exports[`preval-extract babel plugin with extraction enabled should extract each style to separate file and include it into source file 2`] = `
"/**
 * THIS FILE IS AUTOGENERATED. DO NOT EDIT IT DIRECTLY OR COMMIT IT TO VERSION CONTROL.
 * SOURCE: test2.js
 */

._body__16a4ra6{font-weight:bold;}"
`;
